--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
+    "react-resizable-panels": "^3.0.4",
     "react-router": "^7.6.0",
     "sonner": "^2.0.3",
     "sse.js": "^2.6.0",
